syntax = "proto3";
package stwartchain.users;

option go_package = "github.com/stalwart-algoritmiclab/stwart-chain-go/x/users/types";

message DailyStats {
  
  uint64 countUniqueActiveUsers = 1; 
  uint64 countNewUsers = 2; 
}
