syntax = "proto3";
package stwartchain.users;
import "stwartchain/users/unique_user_addresses.proto";

option go_package = "github.com/stalwart-algoritmiclab/stwart-chain-go/x/users/types";

message UniqueUsers {
  string date = 1;
  UniqueUserAddresses uniqueUserAddresses = 2;
}

